# Arkanoid

./: CMakeLists.txt  README.md  allegro_system.c  allegro_system.h  blocks.h  bouncer.c  bouncer.h  config_file.c  config_file.h  floor.c  floor.h  global_vars.h  main.c
src/: allegro_system.h  blocks.c  bouncer.h  floor.c  floor.h  global_vars.h  main.c
